api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  selector:
    matchLabels:
      components: backend
  template:
    metadata:
      labels:
        components: backend
    spec:
      containers:
      - name: conv-app
        image: antonlarichev/conv-api:1.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: app-data
            mountPath: /opt/app/uploads
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-pvc
