converter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-deployment
spec:
  selector:
    matchLabels:
      components: backend
  replicas: 1
  template:
    metadata:
      labels:
        components: backend
    spec:
      containers:
        - name: converter
          image: antonlarichev/conv-service:1.0
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
