rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: rabbitmq
  template:
    metadata:
      labels:
        components: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12-management-alpine
          imagePullPolicy: Always
          ports:
          - name: amqp
            containerPort: 5672
            protocol: TCP
          - name: management
            containerPort: 15672
            protocol: TCP
          - name: epmd
            containerPort: 4369
            protocol: TCP
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
              subPath: mnesia
          resources:
            requests:
              memory: 1Gi
              cpu: 100m
            limits:
              memory: 1Gi
              cpu: 100m
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
