test.yml
# Source: conv-app/templates/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: backend
  template:
    metadata:
      labels:
        components: backend
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests: 
              cpu: 250m
              memory: 128Mi
            limits: 
              cpu: 500m
              memory: 512Mi
          volumeMounts:            
            - name: app-data
              mountPath: /opt/app/uploads
      volumes:          
          - name: app-data
            persistentVolumeClaim:
              claimName: app-pvc
