converter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: converter-clusterip
spec:
  selector:
    components: backend
  ports:
    - protocol: TCP
      port: 4000
  type: ClusterIP
