rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip
spec:
  type: ClusterIP
  selector:
    components: rabbitmq
  ports:
   - name: http
     protocol: TCP
     port: 15672
     targetPort: management
   - name: amqp
     protocol: TCP
     port: 5672
     targetPort: amqp
